# pico-cap1188

./: .clangd  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  justfile
.github/workflows/: build.yml
docs/: CAP1188_Electrical_Characteristics.md  CAP1188_I2C_Protocol.md  CAP1188_Overview.md  CAP1188_Pin_Configuration.md  CAP1188_Register_Map.md  Implementation_Plan.md  Runtime_Configuration.md
examples/basic_touch/: CMakeLists.txt  basic_touch.cpp
include/cap1188/: cap1188.hpp  cap1188_registers.hpp  cap1188_types.hpp
scripts/: setup-clangd.sh
src/: cap1188.cpp
